--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -55,6 +55,66 @@ endif()
 
  if(TFT_UI_SERVICE)
     list(APPEND SOURCES "display")
+    if(TARGET_FW_MARLIN)
+       list(APPEND SOURCES "display/3dprinter/marlin")
+    elseif(TARGET_FW_REPETIER)
+       list(APPEND SOURCES "display/3dprinter/repetier")
+    elseif(TARGET_FW_SMOOTHIEWARE)
+       list(APPEND SOURCES "display/3dprinter/smmothieware")
+    elseif(TARGET_FW_GRBL)
+       list(APPEND SOURCES "display/cnc/grbl")
+endif()
+    if(ESP32_2432S028R)
+        if(TARGET_FW_MARLIN)
+           list(APPEND SOURCES "display/3dprinter/marlin/res_320_240")
+        elseif(TARGET_FW_REPETIER)
+           list(APPEND SOURCES "display/3dprinter/repetier/res_320_240")
+        elseif(TARGET_FW_SMOOTHIEWARE)
+           list(APPEND SOURCES "display/3dprinter/smmothieware/res_320_240")
+        elseif(TARGET_FW_GRBL)
+           list(APPEND SOURCES "display/cnc/grbl/res_320_240")
+        endif()
+    elseif(ESP32S3_HMI43V3)
+        if(TARGET_FW_MARLIN)
+           list(APPEND SOURCES "display/3dprinter/marlin/res_800_480")
+        elseif(TARGET_FW_REPETIER)
+           list(APPEND SOURCES "display/3dprinter/repetier/res_800_480")
+        elseif(TARGET_FW_SMOOTHIEWARE)
+           list(APPEND SOURCES "display/3dprinter/smmothieware/res_800_480")
+        elseif(TARGET_FW_GRBL)
+           list(APPEND SOURCES "display/cnc/grbl/res_800_480")
+        endif()
+    elseif(ESP32_ROTRICS_DEXARM35)
+        if(TARGET_FW_MARLIN)
+           list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
+        elseif(TARGET_FW_REPETIER)
+           list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
+        elseif(TARGET_FW_SMOOTHIEWARE)
+           list(APPEND SOURCES "display/3dprinter/smmothieware/res_480_320")
+        elseif(TARGET_FW_GRBL)
+           list(APPEND SOURCES "display/cnc/grbl/res_480_320")
+        endif()
+    elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
+        if(TARGET_FW_MARLIN)
+           list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
+        elseif(TARGET_FW_REPETIER)
+           list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
+        elseif(TARGET_FW_SMOOTHIEWARE)
+           list(APPEND SOURCES "display/3dprinter/smmothieware/res_480_320")
+        elseif(TARGET_FW_GRBL)
+           list(APPEND SOURCES "display/cnc/grbl/res_480_320")
+        endif()
+    endif()
+endif()
+
+if(TARGET_FW_MARLIN)
+    list(APPEND SOURCES "target/3dprinter/marlin")
+elseif(TARGET_FW_REPETIER)
+   list(APPEND SOURCES "target/3dprinter/repetier")
+elseif(TARGET_FW_SMOOTHIEWARE)
+    list(APPEND SOURCES "target/3dprinter/smmothieware")
+elseif(TARGET_FW_GRBL)
+    list(APPEND SOURCES "target/cnc/grbl")
 endif()
 
 set(INCLUDES .
