Add size definition for padding / outline / radius / etcc according resolution - POC - WIP

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -60,49 +60,65 @@ endif()
     elseif(TARGET_FW_REPETIER)
        list(APPEND SOURCES "display/3dprinter/repetier")
     elseif(TARGET_FW_SMOOTHIEWARE)
-       list(APPEND SOURCES "display/3dprinter/smmothieware")
+       list(APPEND SOURCES "display/3dprinter/smoothieware")
     elseif(TARGET_FW_GRBL)
        list(APPEND SOURCES "display/cnc/grbl")
-endif()
+    endif()
     if(ESP32_2432S028R)
         if(TARGET_FW_MARLIN)
            list(APPEND SOURCES "display/3dprinter/marlin/res_320_240")
+           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_320_240")
         elseif(TARGET_FW_REPETIER)
            list(APPEND SOURCES "display/3dprinter/repetier/res_320_240")
+           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_320_240")
         elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smmothieware/res_320_240")
+           list(APPEND SOURCES "display/3dprinter/smoothieware/res_320_240")
+           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_320_240")
         elseif(TARGET_FW_GRBL)
            list(APPEND SOURCES "display/cnc/grbl/res_320_240")
+           set(INCLUDES_DISPLAY "display/cnc/grbl/res_320_240")
         endif()
     elseif(ESP32S3_HMI43V3)
         if(TARGET_FW_MARLIN)
            list(APPEND SOURCES "display/3dprinter/marlin/res_800_480")
+           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_800_480")
         elseif(TARGET_FW_REPETIER)
            list(APPEND SOURCES "display/3dprinter/repetier/res_800_480")
+           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_800_480")
         elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smmothieware/res_800_480")
+           list(APPEND SOURCES "display/3dprinter/smoothieware/res_800_480")
+           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_800_480")
         elseif(TARGET_FW_GRBL)
            list(APPEND SOURCES "display/cnc/grbl/res_800_480")
+           set(INCLUDES_DISPLAY "display/cnc/grbl/res_800_480")
         endif()
     elseif(ESP32_ROTRICS_DEXARM35)
         if(TARGET_FW_MARLIN)
            list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_320")
         elseif(TARGET_FW_REPETIER)
            list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_320")
         elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smmothieware/res_480_320")
+           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_320")  
         elseif(TARGET_FW_GRBL)
            list(APPEND SOURCES "display/cnc/grbl/res_480_320")
+           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_320")
         endif()
     elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
         if(TARGET_FW_MARLIN)
            list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_320")
         elseif(TARGET_FW_REPETIER)
            list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_320")
         elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smmothieware/res_480_320")
+           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_320")
         elseif(TARGET_FW_GRBL)
            list(APPEND SOURCES "display/cnc/grbl/res_480_320")
+           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_320")
         endif()
     endif()
 endif()
@@ -112,12 +128,13 @@ if(TARGET_FW_MARLIN)
 elseif(TARGET_FW_REPETIER)
    list(APPEND SOURCES "target/3dprinter/repetier")
 elseif(TARGET_FW_SMOOTHIEWARE)
-    list(APPEND SOURCES "target/3dprinter/smmothieware")
+    list(APPEND SOURCES "target/3dprinter/smoothieware")
 elseif(TARGET_FW_GRBL)
     list(APPEND SOURCES "target/cnc/grbl")
 endif()
 
 set(INCLUDES .
+    ${INCLUDES_DISPLAY}
     core/includes
     modules)
 idf_component_register(SRC_DIRS ${SOURCES}
