Implement translation API and FW specific
Implement some translations in Marlin as POC - WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,18 +78,22 @@ if(TARGET_FW_MARLIN)
     if(TFT_UI_SERVICE)
         add_compile_options("-I${CMAKE_SOURCE_DIR}/main/display/3dprinter/marlin")
     endif()
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/main/target/3dprinter/marlin")
 elseif(TARGET_FW_REPETIER)
      if(TFT_UI_SERVICE)
         add_compile_options("-I${CMAKE_SOURCE_DIR}/main/display/3dprinter/repetier")
     endif()
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/main/target/3dprinter/repetier")
 elseif(TARGET_FW_SMOOTHIEWARE)
      if(TFT_UI_SERVICE)
         add_compile_options("-I${CMAKE_SOURCE_DIR}/main/display/3dprinter/smoothiware")
     endif()
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/main/target/3dprinter/smoothiware")
 elseif(TARGET_FW_GRBL)
      if(TFT_UI_SERVICE)
         add_compile_options("-I${CMAKE_SOURCE_DIR}/main/display/cnc/grbl")
     endif()
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/main/target/cnc/grbl")
 else()
     message(FATAL_ERROR
         "\n"
