Add ESP32S3_8048S070 7 inch support - WIP

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -92,6 +92,20 @@ endif()
            list(APPEND SOURCES "display/cnc/grbl/res_800_480")
            set(INCLUDES_DISPLAY "display/cnc/grbl/res_800_480")
         endif()
+    elseif(ESP32S3_8048S070)
+        if(TARGET_FW_MARLIN)
+           list(APPEND SOURCES "display/3dprinter/marlin/res_800_480")
+           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_800_480")
+        elseif(TARGET_FW_REPETIER)
+           list(APPEND SOURCES "display/3dprinter/repetier/res_800_480")
+           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_800_480")
+        elseif(TARGET_FW_SMOOTHIEWARE)
+           list(APPEND SOURCES "display/3dprinter/smoothieware/res_800_480")
+           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_800_480")
+        elseif(TARGET_FW_GRBL)
+           list(APPEND SOURCES "display/cnc/grbl/res_800_480")
+           set(INCLUDES_DISPLAY "display/cnc/grbl/res_800_480")
+        endif()
     elseif(ESP32_ROTRICS_DEXARM35)
         if(TARGET_FW_MARLIN)
            list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
