--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,13 @@
 # Select the targeted hardware
 # #######################################
 OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" OFF)
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
 OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-SRC-4832 3.5inches" OFF)
 OPTION(ESP32S3_FREENOVE_1_1 "HARDWARE TARGET is ESP32S3 Freenove v1.1" OFF)
 OPTION(ESP32S3_ESP32S3_CUSTOM "HARDWARE TARGET is ESP32S3 custom board" OFF)
 OPTION(ESP32S3_ESP32_CUSTOM "HARDWARE TARGET is ESP32 custom board" OFF)
+OPTION(ESP32S3_8048S070 "TFT TARGET is ESP32S3 7.0inches" ON)
 
 
 # #######################################
@@ -51,6 +52,9 @@ if(ESP32_2432S028R)
 elseif(ESP32S3_HMI43V3)
     set(SDKCONFIG hardware/ESP32S3_HMI43V3/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_HMI43V3/components)
+elseif(ESP32S3_8048S070)
+    set(SDKCONFIG hardware/ESP32S3_8048S070/sdkconfig)
+    set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S070/components)
 elseif(ESP32_ROTRICS_DEXARM35)
     set(SDKCONFIG hardware/ESP32_ROTRICS_DEXARM35/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32_ROTRICS_DEXARM35/components)
@@ -115,7 +119,7 @@ add_compile_options(-DLV_LVGL_H_INCLUDE_SIMPLE=1)
 # Disabled = 0
 add_compile_options(-DESP3D_TFT_LOG=2)
 # Disable ANSI color to fit some serial terminals 
-add_compile_options(-DDISABLE_COLOR_LOG=1)
+add_compile_options(-DDISABLE_COLOR_LOG=0)
 
 
 # ESP3D-TFT specific bechmark
@@ -192,6 +196,10 @@ elseif(ESP32S3_HMI43V3)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_HMI43V3/components)
     set(TFT_TARGET "ESP32S3_HMI43V3")
     add_compile_options(-DESP3D_USB_SERIAL_FEATURE=1)
+elseif(ESP32S3_8048S070)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32S3_8048S070/components/bsp")
+    set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S070/components)
+    set(TFT_TARGET "ESP32S3_8048S070")
 elseif(ESP32_ROTRICS_DEXARM35)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/hardware/ESP32_ROTRICS_DEXARM35/components/bsp")
     set(EXTRA_COMPONENT_DIRS hardware/ESP32_ROTRICS_DEXARM35/components)
