Workaround to hide the ugly animation on 7 inch screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ elseif(ESP32S3_HMI43V3)
 elseif(ESP32S3_8048S070)
     set(SDKCONFIG hardware/ESP32S3_8048S070/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S070/components)
+    add_compile_options(-DBUTTON_ANIMATION_DELAY=0)
 elseif(ESP32_ROTRICS_DEXARM35)
     set(SDKCONFIG hardware/ESP32_ROTRICS_DEXARM35/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32_ROTRICS_DEXARM35/components)
