--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -27,16 +27,20 @@ jobs:
         id: ZX3D50CE02SRC4832
         run: bash ./.github/ci/ZX3D50CE02S-SRC-4832.sh
         continue-on-error: true
+      - name: build ESP32S3_8048S070
+        id: ESP32S38048S070
+        run: bash ./.github/ci/ESP32S3_8048S070.sh
+        continue-on-error: true
       - name: Final check failure
         env:
           STEPS_CONTEXT: ${{ toJson(steps) }}
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        if: steps.ESP322432S028R.outcome == 'failure' || steps.ESP32ROTRICSDEXARM35.outcome == 'failure'|| steps.ESP32S3HMI43V3.outcome == 'failure'|| steps.ZX3D50CE02SRC4832.outcome == 'failure'
+        if: steps.ESP322432S028R.outcome == 'failure' || steps.ESP32ROTRICSDEXARM35.outcome == 'failure'|| steps.ESP32S3HMI43V3.outcome == 'failure'|| steps.ZX3D50CE02SRC4832.outcome == 'failure' || steps.ESP32S38048S070.outcome == 'failure'
         run: bash ./.github/ci/final-check.sh "$GITHUB_RUN_ID" "failure"
       - name: Final check failure
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        if: steps.ESP322432S028R.outcome == 'success' && steps.ESP32ROTRICSDEXARM35.outcome == 'success' && steps.ESP32S3HMI43V3.outcome == 'success' && steps.ZX3D50CE02SRC4832.outcome == 'success'
+        if: steps.ESP322432S028R.outcome == 'success' && steps.ESP32ROTRICSDEXARM35.outcome == 'success' && steps.ESP32S3HMI43V3.outcome == 'success' && steps.ZX3D50CE02SRC4832.outcome == 'success' && steps.ESP32S38048S070.outcome == 'success'
         run: bash ./.github/ci/final-check.sh "$GITHUB_RUN_ID" "success"
      
 
