Add basic support for FreeNov 1.1 Board + SD (SDIO)  (no camera yet)
Remove support of ESP32_2432S028R
Update CI according new support targets
Fix compilation failed if no TFT
Fix compilation failed if no HTTP
Fix compilation failed if no UPDATE_FEATURE
Fix compilation failed if no GCODE_HOST_FEATURE
Fix unwished warning if no value list is defined
Move undefined value to warning instead of Error

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -11,9 +11,9 @@ jobs:
           submodules: 'recursive'
       - name: esp-idf setup
         run: bash ./.github/ci/idf-setup.sh
-      - name: build ESP32_2432S028R
-        id: ESP322432S028R
-        run: bash ./.github/ci/ESP32_2432S028R.sh
+      - name: build ESP32S3_FREENOVE
+        id: ESP32S3FREENOVE
+        run: bash ./.github/ci/ESP32S3_FREENOVE.sh
         continue-on-error: true
       - name: build ESP32_ROTRICS_DEXARM35
         id: ESP32ROTRICSDEXARM35
@@ -35,12 +35,12 @@ jobs:
         env:
           STEPS_CONTEXT: ${{ toJson(steps) }}
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        if: steps.ESP322432S028R.outcome == 'failure' || steps.ESP32ROTRICSDEXARM35.outcome == 'failure'|| steps.ESP32S3HMI43V3.outcome == 'failure'|| steps.ZX3D50CE02SRC4832.outcome == 'failure' || steps.ESP32S38048S070.outcome == 'failure'
+        if: steps.ESP32S3FREENOVE.outcome == 'failure' || steps.ESP32ROTRICSDEXARM35.outcome == 'failure'|| steps.ESP32S3HMI43V3.outcome == 'failure'|| steps.ZX3D50CE02SRC4832.outcome == 'failure' || steps.ESP32S38048S070.outcome == 'failure'
         run: bash ./.github/ci/final-check.sh "$GITHUB_RUN_ID" "failure"
       - name: Final check failure
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        if: steps.ESP322432S028R.outcome == 'success' && steps.ESP32ROTRICSDEXARM35.outcome == 'success' && steps.ESP32S3HMI43V3.outcome == 'success' && steps.ZX3D50CE02SRC4832.outcome == 'success' && steps.ESP32S38048S070.outcome == 'success'
+        if: steps.ESP32S3FREENOVE.outcome == 'success' && steps.ESP32ROTRICSDEXARM35.outcome == 'success' && steps.ESP32S3HMI43V3.outcome == 'success' && steps.ZX3D50CE02SRC4832.outcome == 'success' && steps.ESP32S38048S070.outcome == 'success'
         run: bash ./.github/ci/final-check.sh "$GITHUB_RUN_ID" "success"
      
 
