--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@
 # Select the targeted hardware
 # #######################################
 
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
 OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-SRC-4832 3.5inches" OFF)
 OPTION(ESP32S3_8048S070 "TFT TARGET is ESP32S3 7.0inches" OFF)
-OPTION(ESP32S3_FREENOVE_1_1 "HARDWARE TARGET is ESP32S3 Freenove v1.1" OFF)
+OPTION(ESP32S3_FREENOVE_1_1 "HARDWARE TARGET is ESP32S3 Freenove v1.1" ON)
 OPTION(ESP32S3_ESP32S3_CUSTOM "HARDWARE TARGET is ESP32S3 custom board" OFF)
 OPTION(ESP32S3_ESP32_CUSTOM "HARDWARE TARGET is ESP32 custom board" OFF)
 
@@ -31,14 +31,14 @@ OPTION(TARGET_FW_GRBL "GRBL firmware" OFF)
 OPTION(ESP3D_AUTHENTICATION "Authentication on all clients" OFF)
 OPTION(DISABLE_SERIAL_AUTHENTICATION "Disable Serial Authentication" ON)
 OPTION(TIMESTAMP_ON_FILES "Time on file" OFF)
-OPTION(SSDP_SERVICE "SSDP service" ON)
-OPTION(MDNS_SERVICE "MDNS service" ON)
+OPTION(SSDP_SERVICE "SSDP service" OFF)
+OPTION(MDNS_SERVICE "MDNS service" OFF)
 OPTION(WIFI_SERVICE "WiFi service" ON)
 OPTION(BT_SERVICE "Bluetooth service" ON)
 OPTION(WEB_SERVICES "Web Services http/websocket" ON)
 OPTION(TELNET_SERVICE "Telnet service" ON)
 OPTION(WS_SERVICE "WebSocket data service" ON)
-OPTION(TFT_UI_SERVICE "TFT UI service" ON)
+OPTION(TFT_UI_SERVICE "TFT UI service" OFF)
 OPTION(SD_CARD_SERVICE "SD card service" ON)
 OPTION(NOTIFICATIONS_SERVICE "Notifications service" ON)
 OPTION(UPDATE_SERVICE "Update service" ON)
@@ -51,7 +51,11 @@ OPTION(USE_FAT_INSTEAD_OF_LITTLEFS "Use FAT instead of LittleFS" OFF)
 cmake_minimum_required(VERSION 3.12.4)
 set(CMAKE_CXX_STANDARD 20)
 #C:/Users/luc/Documents/GitHub/ESP3D-TFT/
-if(ESP32S3_8048S070)
+if(ESP32S3_FREENOVE_1_1)
+    set(SDKCONFIG C:/Users/luc/Documents/GitHub/ESP3D-TFT/hardware/ESP32S3_FREENOVE_1_1/sdkconfig)
+    set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_FREENOVE_1_1/components)
+    unset(TFT_UI_SERVICE CACHE)
+elseif(ESP32S3_8048S070)
     set(SDKCONFIG hardware/ESP32S3_8048S070/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_8048S070/components)
 elseif(ESP32_2432S028R)
@@ -66,9 +70,6 @@ elseif(ESP32_ROTRICS_DEXARM35)
 elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
     set(SDKCONFIG hardware/ESP32S3_ZX3D50CE02S_USRC_4832/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_ZX3D50CE02S_USRC_4832/components)
-elseif(ESP32S3_FREENOVE_1_1)
-    set(SDKCONFIG hardware/ESP32S3_FREENOVE_1_1/sdkconfig)
-    set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_FREENOVE_1_1/components)
 elseif(ESP32S3_CUSTOM)
     set(SDKCONFIG hardware/ESP32S3_CUSTOM/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_CUSTOM/components)
@@ -190,10 +191,11 @@ endif()
 
 if(SD_CARD_SERVICE)
     add_compile_options(-DESP3D_SD_CARD_FEATURE=1)
-
     if(UPDATE_SERVICE)
         add_compile_options(-DESP3D_UPDATE_FEATURE=1)
     endif()
+else()
+unset(UPDATE_SERVICE CACHE)
 endif()
 
 if(GCODE_HOST_SERVICE)
