--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@
 # Select the targeted hardware
 # #######################################
 
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
-OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
+OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" ON)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-SRC-4832 3.5inches" OFF)
 OPTION(ESP32S3_8048S070 "TFT TARGET is ESP32S3 7.0inches" OFF)
 OPTION(ESP32S3_FREENOVE_1_1 "HARDWARE TARGET is ESP32S3 Freenove v1.1" OFF)
@@ -52,7 +52,7 @@ cmake_minimum_required(VERSION 3.12.4)
 set(CMAKE_CXX_STANDARD 20)
 #C:/Users/luc/Documents/GitHub/ESP3D-TFT/
 if(ESP32S3_FREENOVE_1_1)
-    set(SDKCONFIG C:/Users/luc/Documents/GitHub/ESP3D-TFT/hardware/ESP32S3_FREENOVE_1_1/sdkconfig)
+    set(SDKCONFIG hardware/ESP32S3_FREENOVE_1_1/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_FREENOVE_1_1/components)
     unset(TFT_UI_SERVICE CACHE)
 elseif(ESP32S3_8048S070)
