Add ESP32_CUSTOM sample target  - no TFT - SPI SD - 4 MB flash

--- a/hardware/ESP32_CUSTOM/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32_CUSTOM/components/bsp/CMakeLists.txt
@@ -1,5 +1,9 @@
 # Component directive
+if(MDNS_SERVICE)
+    set(mdnslib mdns)
+endif()
+
 idf_component_register(SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES esp3d_log usb_serial
+    REQUIRES ${mdnslib} esp3d_log 
 )
