Some code reorg for readibility

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -58,12 +58,20 @@ endif()
     list(APPEND SOURCES "modules/rendering")
     if(TARGET_FW_MARLIN)
        list(APPEND SOURCES "display/3dprinter/marlin")
+       list(APPEND SOURCES "display/3dprinter/marlin/screens")
+       list(APPEND SOURCES "display/3dprinter/marlin/components")
     elseif(TARGET_FW_REPETIER)
        list(APPEND SOURCES "display/3dprinter/repetier")
+       list(APPEND SOURCES "display/3dprinter/repetier/screens")
+       list(APPEND SOURCES "display/3dprinter/repetier/components")
     elseif(TARGET_FW_SMOOTHIEWARE)
        list(APPEND SOURCES "display/3dprinter/smoothieware")
+       list(APPEND SOURCES "display/3dprinter/smoothieware/screens")
+       list(APPEND SOURCES "display/3dprinter/smoothieware/components")
     elseif(TARGET_FW_GRBL)
        list(APPEND SOURCES "display/cnc/grbl")
+       list(APPEND SOURCES "display/3dprinter/grbl/screens")
+       list(APPEND SOURCES "display/3dprinter/grbl/components")
     endif()
     if(ESP32_2432S028R)
         if(TARGET_FW_MARLIN)
