Initial support for ESP32_3248S035R

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -101,7 +101,7 @@ endif()
            list(APPEND SOURCES "display/cnc/grbl/res_800_480")
            set(INCLUDES_DISPLAY "display/cnc/grbl/res_800_480")
         endif()
-    elseif(ESP32_ROTRICS_DEXARM35 OR ESP32S3_ZX3D50CE02S_USRC_4832)
+    elseif(ESP32_ROTRICS_DEXARM35 OR ESP32S3_ZX3D50CE02S_USRC_4832 OR ESP32_3248S035R)
         if(TARGET_FW_MARLIN)
            list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
            set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_320")
