Add support for GT911 INT pin hardware mod (and simplify CMakeLists.txt)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,26 +16,20 @@ OPTION(ESP32_CUSTOM "HARDWARE TARGET is ESP32 custom board" OFF)
 # WARNING:
 #   Limited help or support available for these targets.
 #   PSRAM hardware mod is REQUIRED for full functionality and performance.
-OPTION(ESP32_3248S035C "TFT TARGET is ESP32_3248S035C 3.5inches (Capacitive)" OFF)
-OPTION(ESP32_3248S035R "TFT TARGET is ESP32_3248S035R 3.5inches (Resistive)" OFF)
-OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches (Resistive)" OFF)
+OPTION(ESP32_3248S035C "TFT TARGET is ESP32_3248S035C 3.5in. 480x320 (Capacitive)" OFF)
+OPTION(ESP32_3248S035R "TFT TARGET is ESP32_3248S035R 3.5in. 480x320 (Resistive)" OFF)
+OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8in. 320x240 (Resistive)" OFF)
 
 
 # #######################################
-# Optionally select a hardware variant
+# Optionally: Select hardware mods applied
 # #######################################
 if(ESP32_3248S035C)
-    OPTION(ESP32_3248S035C_ORIGINAL "ESP32 3.5inches (Capacitive)  - Original hardware with 4MB Flash, without PSRAM" ON)
-    OPTION(ESP32_3248S035C_4MB_WITH_PSRAM "ESP32 3.5inches (Capacitive) - 4MB Flash, with External PSRAM mod" OFF)
-    OPTION(ESP32_3248S035C_16MB_WITH_PSRAM "ESP32 3.5inches (Capacitive) - 16MB Flash mod, with External PSRAM mod" OFF)
-elseif(ESP32_3248S035R)
-    OPTION(ESP32_3248S035R_ORIGINAL "ESP32 3.5inches (Resistive)  - Original hardware with 4MB Flash, without PSRAM" ON)
-    OPTION(ESP32_3248S035R_4MB_WITH_PSRAM "ESP32 3.5inches (Resistive) - 4MB Flash, with External PSRAM mod" OFF)
-    OPTION(ESP32_3248S035R_16MB_WITH_PSRAM "ESP32 3.5inches (Resistive) - 16MB Flash mod, with External PSRAM mod" OFF)
-elseif(ESP32_2432S028R)
-    OPTION(ESP32_2432S028R_ORIGINAL "ESP32 2.8inches (Resistive) - Original hardware with 4MB Flash, without PSRAM" OFF)
-    OPTION(ESP32_2432S028R_4MB_WITH_PSRAM "ESP32 2.8inches (Resistive) - 4MB Flash, with External PSRAM mod" OFF)
-    OPTION(ESP32_2432S028R_16MB_WITH_PSRAM "ESP32 2.8inches (Resistive) - 16MB Flash mod, with External PSRAM mod" ON)
+    OPTION(HARDWARE_MOD_GT911_INT "Hardware Mod: GT911 INT pin (GPIO21)" OFF)
+endif()
+if(ESP32_3248S035C OR ESP32_3248S035R OR ESP32_2432S028R)
+    OPTION(HARDWARE_MOD_16MB_FLASH "Hardware Mod: 16MB Flash" OFF)
+    OPTION(HARDWARE_MOD_EXT_PSRAM "Hardware Mod: External PSRAM" OFF)
 endif()
 
 
@@ -90,52 +84,52 @@ elseif(ESP32S3_8048S043)
 elseif(ESP32S3_4827S043)
     set(SDKCONFIG hardware/ESP32S3_4827S043/sdkconfig)
     set(EXTRA_COMPONENT_DIRS hardware/ESP32S3_4827S043/components)
-    elseif(ESP32_3248S035C)
-    if(ESP32_3248S035C_16MB_WITH_PSRAM)
-        set(SDKCONFIG hardware/ESP32_3248S035C/variants/16MB_with_PSRAM/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035C/variants/16MB_with_PSRAM/components)
+elseif(ESP32_3248S035C)
+    set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035C/components)
+    if(HARDWARE_MOD_GT911_INT)
+        add_compile_options(-DWITH_GT911_INT=1)
+    endif()
+    if(HARDWARE_MOD_EXT_PSRAM)
         add_compile_options(-DWITH_PSRAM=1)
-    elseif(ESP32_3248S035C_4MB_WITH_PSRAM)
-        set(SDKCONFIG hardware/ESP32_3248S035C/variants/4MB_with_PSRAM/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035C/variants/4MB_with_PSRAM/components)
-        add_compile_options(-DWITH_PSRAM=1)
+        if(HARDWARE_MOD_16MB_FLASH)
+            set(SDKCONFIG hardware/ESP32_3248S035C/variants/16MB_with_PSRAM/sdkconfig)        
+        else()
+            set(SDKCONFIG hardware/ESP32_3248S035C/variants/4MB_with_PSRAM/sdkconfig)
+        endif()
     else()
         set(SDKCONFIG hardware/ESP32_3248S035C/variants/4MB_original/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035C/variants/4MB_original/components)
         message(DEPRECATION
             "\n"
             "Target is missing PSRAM and is not officially supported due to known performance and functionality issues."
             "\n")
     endif()
 elseif(ESP32_3248S035R)
-    if(ESP32_3248S035R_16MB_WITH_PSRAM)
-        set(SDKCONFIG hardware/ESP32_3248S035R/variants/16MB_with_PSRAM/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035R/variants/16MB_with_PSRAM/components)
+    set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035R/components)
+    if(HARDWARE_MOD_EXT_PSRAM)
         add_compile_options(-DWITH_PSRAM=1)
-    elseif(ESP32_3248S035R_4MB_WITH_PSRAM)
-        set(SDKCONFIG hardware/ESP32_3248S035R/variants/4MB_with_PSRAM/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035R/variants/4MB_with_PSRAM/components)
-        add_compile_options(-DWITH_PSRAM=1)
+        if(HARDWARE_MOD_16MB_FLASH)
+            set(SDKCONFIG hardware/ESP32_3248S035R/variants/16MB_with_PSRAM/sdkconfig)        
+        else()
+            set(SDKCONFIG hardware/ESP32_3248S035R/variants/4MB_with_PSRAM/sdkconfig)
+        endif()
     else()
         set(SDKCONFIG hardware/ESP32_3248S035R/variants/4MB_original/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_3248S035R/variants/4MB_original/components)
         message(DEPRECATION
             "\n"
             "Target is missing PSRAM and is not officially supported due to known performance and functionality issues."
             "\n")
     endif()
 elseif(ESP32_2432S028R)
-    if(ESP32_2432S028R_16MB_WITH_PSRAM)
-        set(SDKCONFIG hardware/ESP32_2432S028R/variants/16MB_with_PSRAM/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_2432S028R/variants/16MB_with_PSRAM/components)
+    set(EXTRA_COMPONENT_DIRS hardware/ESP32_2432S028R/components)
+    if(HARDWARE_MOD_EXT_PSRAM)
         add_compile_options(-DWITH_PSRAM=1)
-    elseif(ESP32_2432S028R_4MB_WITH_PSRAM)
-        set(SDKCONFIG hardware/ESP32_2432S028R/variants/4MB_with_PSRAM/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_2432S028R/variants/4MB_with_PSRAM/components)
-        add_compile_options(-DWITH_PSRAM=1)
+        if(HARDWARE_MOD_16MB_FLASH)
+            set(SDKCONFIG hardware/ESP32_2432S028R/variants/16MB_with_PSRAM/sdkconfig)        
+        else()
+            set(SDKCONFIG hardware/ESP32_2432S028R/variants/4MB_with_PSRAM/sdkconfig)
+        endif()
     else()
         set(SDKCONFIG hardware/ESP32_2432S028R/variants/4MB_original/sdkconfig)
-        set(EXTRA_COMPONENT_DIRS hardware/ESP32_2432S028R/variants/4MB_original/components)
         message(DEPRECATION
             "\n"
             "Target is missing PSRAM and is not officially supported due to known performance and functionality issues."
