Add new board ESP32S3_BZM_TFT35_GT911  (#29)
* Add new board ESP32S3_BZM_TFT35_GT911

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -129,6 +129,20 @@ endif()
            list(APPEND SOURCES "display/cnc/grbl/res_480_272")
            set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_272")
         endif()
+    elseif(ESP32S3_BZM_TFT35_GT911)
+        if(TARGET_FW_MARLIN)
+           list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_320")
+        elseif(TARGET_FW_REPETIER)
+           list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_320")
+        elseif(TARGET_FW_SMOOTHIEWARE)
+           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_320")
+           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_320")
+        elseif(TARGET_FW_GRBL)
+           list(APPEND SOURCES "display/cnc/grbl/res_480_320")
+           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_320")
+        endif()
     endif()
 endif()
 
