Cleanup CMakeLists.txt

--- a/hardware/ESP32S3_HMI43V3/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_HMI43V3/components/bsp/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Component directive
-idf_component_register(SRCS "bsp.c"
+idf_component_register(
+    SRCS "bsp.c"
     INCLUDE_DIRS .
     REQUIRES esp3d_log lvgl i2c_bus ft5x06 rm68120 tca9554 usb_serial
 )
