--- a/hardware/ESP32_CUSTOM/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32_CUSTOM/components/bsp/CMakeLists.txt
@@ -1,9 +1,6 @@
 # Component directive
-if(MDNS_SERVICE)
-    set(mdnslib mdns)
-endif()
-
-idf_component_register(SRCS "bsp.c"
+idf_component_register(
+    SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES ${mdnslib} esp3d_log 
+    REQUIRES esp3d_log 
 )
