--- a/hardware/ESP32S3_4827S043/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_4827S043/components/bsp/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Component directive
-idf_component_register(SRCS "bsp.c" "bsp_patch.c"
+idf_component_register(
+    SRCS "bsp.c" "bsp_patch.c"
     INCLUDE_DIRS .
     REQUIRES esp3d_log lvgl i2c_bus gt911 st7262 lcd_backlight
 )
