--- a/hardware/ESP32S3_ZX3D50CE02S_USRC_4832/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_ZX3D50CE02S_USRC_4832/components/bsp/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Component directive
-idf_component_register(SRCS "bsp.c"
+idf_component_register(
+    SRCS "bsp.c"
     INCLUDE_DIRS .
     REQUIRES esp3d_log lvgl i2c_bus ft5x06 st7796 usb_serial
 )
