Convert ILI9341 driver to use esp_lcd instead of disp_spi

--- a/hardware/ESP32_2432S028R/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32_2432S028R/components/bsp/CMakeLists.txt
@@ -2,5 +2,5 @@
 idf_component_register(
     SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES esp3d_log lvgl spi_bus disp_spi ili9341 sw_spi xpt2046 disp_backlight
+    REQUIRES esp3d_log lvgl spi_bus ili9341 sw_spi xpt2046 disp_backlight
 )
