--- a/hardware/common/components/ili9341/CMakeLists.txt
+++ b/hardware/common/components/ili9341/CMakeLists.txt
@@ -4,5 +4,5 @@ set(INCLUDES .)
 idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log disp_spi
+    REQUIRES esp3d_log esp_lcd driver
 )
