--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -25,6 +25,21 @@ if(WIFI_SERVICE)
     if(WEB_SERVICES)
         list(APPEND SOURCES "modules/http")
         list(APPEND SOURCES "modules/http/handlers")
+        if(SSDP_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/ssdp")
+        endif()
+        if(SD_CARD_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/sd")
+        endif()
+        if(UPDATE_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/update")
+        endif()
+        if(WS_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/ws")
+        endif()
+        if(WEBDAV_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/webdav")
+        endif()
         list(APPEND SOURCES "modules/websocket")
         set(WEBEMBEDDEDFILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
     endif()
