Add code base for webdav handlers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,8 @@ OPTION(SSDP_SERVICE "SSDP service" ON)
 OPTION(MDNS_SERVICE "MDNS service" ON)
 OPTION(WIFI_SERVICE "WiFi service" ON)
 OPTION(BT_SERVICE "Bluetooth service" ON)
-OPTION(WEB_SERVICES "Web Services http/websocket" ON)
+OPTION(WEB_SERVICES "Web Services http/websocket/webdav" ON)
+OPTION(WEBDAV_SERVICES "WebDav Services" ON)
 OPTION(TELNET_SERVICE "Telnet service" ON)
 OPTION(WS_SERVICE "WebSocket data service" ON)
 OPTION(TFT_UI_SERVICE "TFT UI service" ON)
@@ -248,9 +249,11 @@ if(WIFI_SERVICE)
 
     if(WEB_SERVICES)
         add_compile_options(-DESP3D_HTTP_FEATURE=1)
-
         if(WS_SERVICE)
             add_compile_options(-DESP3D_WS_SERVICE_FEATURE=1)
+        endif()
+        if(WEBDAV_SERVICE)
+            add_compile_options(-DESP3D_WEBDAV_SERVICE_FEATURE=1)
         endif()
     endif()
 
