Add define for the lock methods
Add code base for webdav module with methods / set header function

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -39,6 +39,7 @@ if(WIFI_SERVICE)
         endif()
         if(WEBDAV_SERVICE)
             list(APPEND SOURCES "modules/http/handlers/webdav")
+            list(APPEND SOURCES "modules/webdav")
         endif()
         list(APPEND SOURCES "modules/websocket")
         set(WEBEMBEDDEDFILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
