--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -37,7 +37,7 @@ if(WIFI_SERVICE)
         if(WS_SERVICE)
             list(APPEND SOURCES "modules/http/handlers/ws")
         endif()
-        if(WEBDAV_SERVICE)
+        if(WEBDAV_SERVICES)
             list(APPEND SOURCES "modules/http/handlers/webdav")
             list(APPEND SOURCES "modules/webdav")
         endif()
