--- a/docs/esp3dcnf.ini
+++ b/docs/esp3dcnf.ini
@@ -112,8 +112,8 @@ Time_server1 = 1.pool.ntp.org
 Time_server2 = 2.pool.ntp.org
 Time_server3 = 3.pool.ntp.org
 
-#time zone -12~12
-Time_zone = 2
+#time zone +/-HH:mm
+Time_zone = +08:00
 #is DST Yes/No
 Time_DST = No
 
