Add WebDav and Time support (#45)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,12 +49,13 @@ OPTION(TARGET_FW_GRBL "GRBL firmware" OFF)
 # #######################################
 OPTION(ESP3D_AUTHENTICATION "Authentication on all clients" OFF)
 OPTION(DISABLE_SERIAL_AUTHENTICATION "Disable Serial Authentication" ON)
-OPTION(TIMESTAMP_ON_FILES "Time on file" OFF)
+OPTION(TIME_SERVICE  "Time service" ON)
 OPTION(SSDP_SERVICE "SSDP service" ON)
 OPTION(MDNS_SERVICE "MDNS service" ON)
 OPTION(WIFI_SERVICE "WiFi service" ON)
 OPTION(BT_SERVICE "Bluetooth service" ON)
-OPTION(WEB_SERVICES "Web Services http/websocket" ON)
+OPTION(WEB_SERVICES "Web Services http/websocket/webdav" ON)
+OPTION(WEBDAV_SERVICES "WebDav Services" ON)
 OPTION(TELNET_SERVICE "Telnet service" ON)
 OPTION(WS_SERVICE "WebSocket data service" ON)
 OPTION(TFT_UI_SERVICE "TFT UI service" ON)
@@ -231,7 +232,7 @@ if(DISABLE_SERIAL_AUTHENTICATION)
     add_compile_options(-DESP3D_DISABLE_SERIAL_AUTHENTICATION_FEATURE=1)
 endif()
 
-if(TIMESTAMP_ON_FILES)
+if(TIME_SERVICE)
     add_compile_options(-DESP3D_TIMESTAMP_FEATURE=1)
 endif()
 
@@ -248,9 +249,11 @@ if(WIFI_SERVICE)
 
     if(WEB_SERVICES)
         add_compile_options(-DESP3D_HTTP_FEATURE=1)
-
         if(WS_SERVICE)
             add_compile_options(-DESP3D_WS_SERVICE_FEATURE=1)
+        endif()
+        if(WEBDAV_SERVICES)
+            add_compile_options(-DESP3D_WEBDAV_SERVICES_FEATURE=1)
         endif()
     endif()
 
