--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,6 +13,10 @@ set(SOURCES .
     modules/gcode_host
 )
 
+if(TIME_SERVICE)
+    list(APPEND SOURCES "modules/time")
+endif()
+
 if(WIFI_SERVICE)
     if(SSDP_SERVICE)
         list(APPEND SOURCES "modules/ssdp")
@@ -25,6 +29,22 @@ if(WIFI_SERVICE)
     if(WEB_SERVICES)
         list(APPEND SOURCES "modules/http")
         list(APPEND SOURCES "modules/http/handlers")
+        if(SSDP_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/ssdp")
+        endif()
+        if(SD_CARD_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/sd")
+        endif()
+        if(UPDATE_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/update")
+        endif()
+        if(WS_SERVICE)
+            list(APPEND SOURCES "modules/http/handlers/ws")
+        endif()
+        if(WEBDAV_SERVICES)
+            list(APPEND SOURCES "modules/http/handlers/webdav")
+            list(APPEND SOURCES "modules/webdav")
+        endif()
         list(APPEND SOURCES "modules/websocket")
         set(WEBEMBEDDEDFILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
     endif()
