Add [ESP216]SNAP command to dump raw image to SD
Add conv.py tool to convert dump image of screen to png image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -220,6 +220,8 @@ add_compile_options(-DESP3D_TFT_LOG=2)
 # Disable ANSI color to fit some serial terminals 
 add_compile_options(-DDISABLE_COLOR_LOG=0)
 
+#Use the Snapshot API of LVGL to dump screens to the SD card
+add_compile_options(-DLV_USE_SNAPSHOT=1)
 
 # ESP3D-TFT specific bechmark
 # Enabled  = 1
