Add camera function to BZM motherboard
Camera using OV2640

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ OPTION(TIME_SERVICE  "Time service" ON)
 OPTION(SSDP_SERVICE "SSDP service" ON)
 OPTION(MDNS_SERVICE "MDNS service" ON)
 OPTION(WIFI_SERVICE "WiFi service" ON)
-OPTION(BT_SERVICE "Bluetooth service" ON)
+OPTION(BT_SERVICE "Bluetooth service" OFF)
 OPTION(WEB_SERVICES "Web Services http/websocket/webdav" ON)
 OPTION(WEBDAV_SERVICES "WebDav Services" ON)
 OPTION(TELNET_SERVICE "Telnet service" ON)
@@ -63,6 +63,10 @@ OPTION(SD_CARD_SERVICE "SD card service" ON)
 OPTION(NOTIFICATIONS_SERVICE "Notifications service" ON)
 OPTION(UPDATE_SERVICE "Update service" ON)
 OPTION(USE_FAT_INSTEAD_OF_LITTLEFS "Use FAT instead of LittleFS" OFF)
+if(ESP32S3_BZM_TFT35_GT911)
+#     if  CAMERA_SERVICE is ON， UPDATE_SERVICE must be OFF.
+    OPTION(CAMERA_SERVICE "Camera service" ON)
+endif()
 
 # #######################################
 # Do not change anything below this line
@@ -258,6 +262,9 @@ if(WIFI_SERVICE)
         endif()
         if(WEBDAV_SERVICES)
             add_compile_options(-DESP3D_WEBDAV_SERVICES_FEATURE=1)
+        endif()
+        if(CAMERA_SERVICE)
+            add_compile_options(-DESP3D_CAMERA_FEATURE=1)
         endif()
     endif()
 
